begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.yarn.security
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|security
package|;
end_package

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ApplicationAttemptId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ApplicationId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ContainerId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|NodeId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|Priority
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|Resource
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Assert
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Test
import|;
end_import

begin_class
DECL|class|TestYARNTokenIdentifier
specifier|public
class|class
name|TestYARNTokenIdentifier
block|{
annotation|@
name|Test
DECL|method|testNMTokenIdentifier ()
specifier|public
name|void
name|testNMTokenIdentifier
parameter_list|()
block|{
name|ApplicationAttemptId
name|appAttemptId
init|=
name|ApplicationAttemptId
operator|.
name|newInstance
argument_list|(
name|ApplicationId
operator|.
name|newInstance
argument_list|(
literal|1
argument_list|,
literal|1
argument_list|)
argument_list|,
literal|1
argument_list|)
decl_stmt|;
name|NodeId
name|nodeId
init|=
name|NodeId
operator|.
name|newInstance
argument_list|(
literal|"host0"
argument_list|,
literal|0
argument_list|)
decl_stmt|;
name|String
name|applicationSubmitter
init|=
literal|"usr0"
decl_stmt|;
name|int
name|masterKeyId
init|=
literal|1
decl_stmt|;
name|NMTokenIdentifier
name|token
init|=
operator|new
name|NMTokenIdentifier
argument_list|(
name|appAttemptId
argument_list|,
name|nodeId
argument_list|,
name|applicationSubmitter
argument_list|,
name|masterKeyId
argument_list|)
decl_stmt|;
name|NMTokenIdentifier
name|anotherToken
init|=
operator|new
name|NMTokenIdentifier
argument_list|(
name|appAttemptId
argument_list|,
name|nodeId
argument_list|,
name|applicationSubmitter
argument_list|,
name|masterKeyId
argument_list|)
decl_stmt|;
comment|// verify the whole record equals with original record
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"Token is not the same after serialization "
operator|+
literal|"and deserialization."
argument_list|,
name|token
argument_list|,
name|anotherToken
argument_list|)
expr_stmt|;
comment|// verify all properties are the same as original
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"appAttemptId from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getApplicationAttemptId
argument_list|()
argument_list|,
name|appAttemptId
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"NodeId from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getNodeId
argument_list|()
argument_list|,
name|nodeId
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"applicationSubmitter from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getApplicationSubmitter
argument_list|()
argument_list|,
name|applicationSubmitter
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"masterKeyId from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getKeyId
argument_list|()
argument_list|,
name|masterKeyId
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testAMRMTokenIdentifier ()
specifier|public
name|void
name|testAMRMTokenIdentifier
parameter_list|()
block|{
name|ApplicationAttemptId
name|appAttemptId
init|=
name|ApplicationAttemptId
operator|.
name|newInstance
argument_list|(
name|ApplicationId
operator|.
name|newInstance
argument_list|(
literal|1
argument_list|,
literal|1
argument_list|)
argument_list|,
literal|1
argument_list|)
decl_stmt|;
name|int
name|masterKeyId
init|=
literal|1
decl_stmt|;
name|AMRMTokenIdentifier
name|token
init|=
operator|new
name|AMRMTokenIdentifier
argument_list|(
name|appAttemptId
argument_list|,
name|masterKeyId
argument_list|)
decl_stmt|;
name|AMRMTokenIdentifier
name|anotherToken
init|=
operator|new
name|AMRMTokenIdentifier
argument_list|(
name|appAttemptId
argument_list|,
name|masterKeyId
argument_list|)
decl_stmt|;
comment|// verify the whole record equals with original record
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"Token is not the same after serialization "
operator|+
literal|"and deserialization."
argument_list|,
name|token
argument_list|,
name|anotherToken
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"ApplicationAttemptId from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getApplicationAttemptId
argument_list|()
argument_list|,
name|appAttemptId
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"masterKeyId from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getKeyId
argument_list|()
argument_list|,
name|masterKeyId
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testContainerTokenIdentifier ()
specifier|public
name|void
name|testContainerTokenIdentifier
parameter_list|()
block|{
name|ContainerId
name|containerID
init|=
name|ContainerId
operator|.
name|newInstance
argument_list|(
name|ApplicationAttemptId
operator|.
name|newInstance
argument_list|(
name|ApplicationId
operator|.
name|newInstance
argument_list|(
literal|1
argument_list|,
literal|1
argument_list|)
argument_list|,
literal|1
argument_list|)
argument_list|,
literal|1
argument_list|)
decl_stmt|;
name|String
name|hostName
init|=
literal|"host0"
decl_stmt|;
name|String
name|appSubmitter
init|=
literal|"usr0"
decl_stmt|;
name|Resource
name|r
init|=
name|Resource
operator|.
name|newInstance
argument_list|(
literal|1024
argument_list|,
literal|1
argument_list|)
decl_stmt|;
name|long
name|expiryTimeStamp
init|=
literal|1000
decl_stmt|;
name|int
name|masterKeyId
init|=
literal|1
decl_stmt|;
name|long
name|rmIdentifier
init|=
literal|1
decl_stmt|;
name|Priority
name|priority
init|=
name|Priority
operator|.
name|newInstance
argument_list|(
literal|1
argument_list|)
decl_stmt|;
name|long
name|creationTime
init|=
literal|1000
decl_stmt|;
name|ContainerTokenIdentifier
name|token
init|=
operator|new
name|ContainerTokenIdentifier
argument_list|(
name|containerID
argument_list|,
name|hostName
argument_list|,
name|appSubmitter
argument_list|,
name|r
argument_list|,
name|expiryTimeStamp
argument_list|,
name|masterKeyId
argument_list|,
name|rmIdentifier
argument_list|,
name|priority
argument_list|,
name|creationTime
argument_list|)
decl_stmt|;
name|ContainerTokenIdentifier
name|anotherToken
init|=
operator|new
name|ContainerTokenIdentifier
argument_list|(
name|containerID
argument_list|,
name|hostName
argument_list|,
name|appSubmitter
argument_list|,
name|r
argument_list|,
name|expiryTimeStamp
argument_list|,
name|masterKeyId
argument_list|,
name|rmIdentifier
argument_list|,
name|priority
argument_list|,
name|creationTime
argument_list|)
decl_stmt|;
comment|// verify the whole record equals with original record
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"Token is not the same after serialization "
operator|+
literal|"and deserialization."
argument_list|,
name|token
argument_list|,
name|anotherToken
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"ContainerID from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getContainerID
argument_list|()
argument_list|,
name|containerID
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"Hostname from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getNmHostAddress
argument_list|()
argument_list|,
name|hostName
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"ApplicationSubmitter from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getApplicationSubmitter
argument_list|()
argument_list|,
name|appSubmitter
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"Resource from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getResource
argument_list|()
argument_list|,
name|r
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"expiryTimeStamp from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getExpiryTimeStamp
argument_list|()
argument_list|,
name|expiryTimeStamp
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"KeyId from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getMasterKeyId
argument_list|()
argument_list|,
name|masterKeyId
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"RMIdentifier from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getRMIdentifier
argument_list|()
argument_list|,
name|rmIdentifier
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"Priority from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getPriority
argument_list|()
argument_list|,
name|priority
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|"CreationTime from proto is not the same with original token"
argument_list|,
name|anotherToken
operator|.
name|getCreationTime
argument_list|()
argument_list|,
name|creationTime
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertNull
argument_list|(
name|anotherToken
operator|.
name|getLogAggregationContext
argument_list|()
argument_list|)
expr_stmt|;
block|}
block|}
end_class

end_unit

